CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(MFW_VERSION "1.0")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
IF (NOT DEFINED CMAKE_INSTALL_PREFIX)
    SET(CMAKE_INSTALL_PREFIX "./tex-${MFW_VERSION}" CACHE PATH "Install path prefix")
ENDIF()

PROJECT(tex)

INCLUDE(${CMAKE_SOURCE_DIR}/src/cmake/mfw-sdp.cmake)
INCLUDE(${CMAKE_SOURCE_DIR}/src/cmake/luajit.cmake)

ADD_DEFINITIONS(-Wno-deprecated -Wall -W -g -O0)
ADD_SUBDIRECTORY(src)

INSTALL(DIRECTORY script/DemoServer DESTINATION script)
INSTALL(FILES script/CMakeLists.txt DESTINATION script)
INSTALL(FILES script/create_mfw_server.sh DESTINATION script PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
