
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/3party/jsoncpp)

ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(parse)
ADD_SUBDIRECTORY(sdp)
ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(redis)
ADD_SUBDIRECTORY(cmake)
ADD_SUBDIRECTORY(3party)
ADD_SUBDIRECTORY(luamod)
ADD_SUBDIRECTORY(test)

ADD_SUBDIRECTORY(mfwserver)

INSTALL(EXPORT mfw-libs DESTINATION cmake)
