INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/tolua++)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/bin_tolua++ SOURCE_FILES)
ADD_EXECUTABLE(tolua++ ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(tolua++ luajit dl m)

INSTALL(TARGETS tolua++ DESTINATION bin EXPORT mfw-libs)
INSTALL(DIRECTORY tolua++ DESTINATION 3party-include)
