ADD_DEFINITIONS(-D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/zlib)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lib_zlib SOURCE_FILES)
ADD_LIBRARY(zlib STATIC ${SOURCE_FILES})

INSTALL(TARGETS zlib DESTINATION 3party-lib EXPORT mfw-libs)
INSTALL(DIRECTORY zlib DESTINATION 3party-include)
