INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/src/service/sdp)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)

ADD_EXECUTABLE(mfwlog ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(mfwlog service)

INSTALL(TARGETS mfwlog DESTINATION server/mfwlog)
INSTALL(FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/start.sh
    ${CMAKE_CURRENT_SOURCE_DIR}/stop.sh
    ${CMAKE_CURRENT_SOURCE_DIR}/mfwlog.mfw.conf.example
    ${CMAKE_CURRENT_SOURCE_DIR}/mfwlog.conf.example
    DESTINATION server/mfwlog)
