INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/3party/tinyxml)
INCLUDE(${PROJECT_SOURCE_DIR}/src/cmake/mysql.cmake)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)

ADD_EXECUTABLE(mfwsynclog ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(mfwsynclog service util mysql rt dl tinyxml)

INSTALL(TARGETS mfwsynclog DESTINATION bin)
