SET(SERVER DemoServer)

build_sdp(${APP}-${SERVER} ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)
ADD_EXECUTABLE(${SERVER} ${SOURCE_FILES})

use_sdp_library(${APP}-${SERVER} LIBRARY_FILES)
TARGET_LINK_LIBRARIES(${SERVER} ${LIBRARY_FILES})
