INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/sdp)

ADD_LIBRARY(sdplua-dynamic SHARED sdplua.cpp)
SET_TARGET_PROPERTIES(sdplua-dynamic PROPERTIES PREFIX "" OUTPUT_NAME sdplua)

ADD_LIBRARY(sdplua STATIC sdplua.cpp)

INSTALL(TARGETS sdplua-dynamic DESTINATION lua)
INSTALL(TARGETS sdplua DESTINATION lua EXPORT mfw-libs)
INSTALL(FILES sdp.lua DESTINATION lua)
