INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/sdp)
SET(PHP_INCLUDE_BASE /usr/include/php)
INCLUDE_DIRECTORIES(${PHP_INCLUDE_BASE} ${PHP_INCLUDE_BASE}/main ${PHP_INCLUDE_BASE}/TSRM ${PHP_INCLUDE_BASE}/Zend ${PHP_INCLUDE_BASE}/ext ${PHP_INCLUDE_BASE}/ext/date/lib)
ADD_DEFINITIONS(-O3)

ADD_LIBRARY(sdpphp SHARED sdpphp.cpp php_sdpphp.h sdpphp_imp.cpp sdpphp_imp.h)
SET_TARGET_PROPERTIES(sdpphp PROPERTIES PREFIX "" OUTPUT_NAME sdpphp)

INSTALL(TARGETS sdpphp DESTINATION php)
